@@ -1,15 +1,19 @@
 package fi.vm.yti.datamodel.api.v2.service;
 
 import fi.vm.yti.datamodel.api.index.OpenSearchConnector;
+import fi.vm.yti.datamodel.api.v2.dto.ModelType;
 import fi.vm.yti.datamodel.api.v2.endpoint.error.OpenSearchException;
 import fi.vm.yti.datamodel.api.v2.mapper.MapperUtils;
-import fi.vm.yti.datamodel.api.v2.opensearch.dto.*;
-import fi.vm.yti.datamodel.api.v2.opensearch.index.IndexResource;
-import fi.vm.yti.datamodel.api.v2.opensearch.index.IndexModel;
-import fi.vm.yti.datamodel.api.v2.opensearch.index.OpenSearchIndexer;
-import fi.vm.yti.datamodel.api.v2.opensearch.queries.ResourceQueryFactory;
+import fi.vm.yti.datamodel.api.v2.mapper.ResourceMapper;
+import fi.vm.yti.datamodel.api.v2.opensearch.dto.CountSearchResponse;
+import fi.vm.yti.datamodel.api.v2.opensearch.dto.ModelSearchRequest;
+import fi.vm.yti.datamodel.api.v2.opensearch.dto.ResourceSearchRequest;
+import fi.vm.yti.datamodel.api.v2.opensearch.dto.SearchResponseDTO;
+import fi.vm.yti.datamodel.api.v2.opensearch.index.*;
 import fi.vm.yti.datamodel.api.v2.opensearch.queries.CountQueryFactory;
 import fi.vm.yti.datamodel.api.v2.opensearch.queries.ModelQueryFactory;
+import fi.vm.yti.datamodel.api.v2.opensearch.queries.QueryFactoryUtils;
+import fi.vm.yti.datamodel.api.v2.opensearch.queries.ResourceQueryFactory;
 import fi.vm.yti.security.Role;
 import fi.vm.yti.security.YtiUser;
 import org.apache.jena.vocabulary.DCTerms;
@@ -25,15 +29,12 @@ import java.util.stream.Collectors;
 @Service
 public class SearchIndexService {
 
-    private final CountQueryFactory countQueryFactory;
     private final OpenSearchClient client;
     private final GroupManagementService groupManagementService;
     private final JenaService jenaService;
 
     public SearchIndexService(OpenSearchConnector openSearchConnector,
-                              CountQueryFactory countQueryFactory,
                               GroupManagementService groupManagementService, JenaService jenaService) {
-        this.countQueryFactory = countQueryFactory;
         this.client = openSearchConnector.getClient();
         this.groupManagementService = groupManagementService;
         this.jenaService = jenaService;
@@ -44,10 +45,10 @@ public class SearchIndexService {
      * @return response containing counts for data models
      */
     public CountSearchResponse getCounts() {
-        var query = countQueryFactory.createModelQuery();
+        var query = CountQueryFactory.createModelQuery();
         try {
             var response = client.search(query, IndexModel.class);
-            return countQueryFactory.parseResponse(response);
+            return CountQueryFactory.parseResponse(response);
         } catch (IOException e) {
             throw new OpenSearchException(e.getMessage(), OpenSearchIndexer.OPEN_SEARCH_INDEX_MODEL);
         }
@@ -65,7 +66,7 @@ public class SearchIndexService {
             var modelSearchResponse = new SearchResponseDTO<IndexModel>();
             modelSearchResponse.setResponseObjects(response.hits().hits().stream()
                     .map(Hit::source)
-                    .collect(Collectors.toList())
+                    .toList()
             );
             modelSearchResponse.setTotalHitCount(response.hits().total().value());
             modelSearchResponse.setPageFrom(request.getPageFrom());
@@ -82,6 +83,7 @@ public class SearchIndexService {
         if(!user.isSuperuser()){
                 var organizations = getOrganizationsForUser(user);
                 var modelRequest = new ModelSearchRequest();
+                modelRequest.setPageSize(QueryFactoryUtils.INTERNAL_SEARCH_PAGE_SIZE);
                 modelRequest.setOrganizations(organizations);
                 modelRequest.setIncludeIncompleteFrom(organizations);
                 var build = ModelQueryFactory.createModelQuery(modelRequest);
@@ -93,12 +95,43 @@ public class SearchIndexService {
         return searchInternalResources(request, allowedDatamodels);
     }
 
-    private List<String> getModelSpecificRestrictions(ResourceSearchRequest request){
+    public SearchResponseDTO<IndexResourceInfo> searchInternalResourcesWithInfo(ResourceSearchRequest request, YtiUser user) throws IOException {
+        var dto = searchInternalResources(request, user);
+        var dataModels = new HashMap<String, IndexModel>();
+
         var modelRequest = new ModelSearchRequest();
-        if(request.getLimitToModelType() != null){
-            modelRequest.setType(Set.of(request.getLimitToModelType()));
+        modelRequest.setPageSize(1000);
+
+        searchModels(modelRequest, user).getResponseObjects()
+                .forEach(o -> dataModels.put(o.getId(), o));
+        var concepts = jenaService.getAllConcepts();
+
+        var response = new SearchResponseDTO<IndexResourceInfo>();
+        response.setTotalHitCount(dto.getTotalHitCount());
+        response.setPageSize(dto.getPageSize());
+        response.setPageFrom(dto.getPageFrom());
+        response.setResponseObjects(dto.getResponseObjects().stream()
+                .map(obj -> ResourceMapper.mapIndexResourceInfo(obj, dataModels, concepts))
+                .toList());
+        return response;
+    }
+
+    /**
+     * Get model specific restrictions for a resource search
+     * @param modelType Model type
+     * @param groups Service category groups
+     * @return List of DataModel URIs
+     */
+    private List<String> getModelSpecificRestrictions(ModelType modelType, Set<String> groups){
+        if(modelType == null && (groups == null || groups.isEmpty())){
+            //Skip the search all together if no extra filtering needs to be done
+            return Collections.emptyList();
         }
-        var groups = request.getGroups();
+        var modelRequest = new ModelSearchRequest();
+        modelRequest.setPageSize(QueryFactoryUtils.INTERNAL_SEARCH_PAGE_SIZE);
+        if(modelType != null){
+            modelRequest.setType(Set.of(modelType));
+        }
         if(groups != null && !groups.isEmpty()){
             modelRequest.setGroups(groups);
         }
@@ -126,7 +159,7 @@ public class SearchIndexService {
             getNamespacesFromModel(request.getLimitToDataModel(), namespaces);
         }
 
-        List<String> restrictedDataModels = getModelSpecificRestrictions(request);
+        var restrictedDataModels = getModelSpecificRestrictions(request.getLimitToModelType(), request.getGroups());
         var build = ResourceQueryFactory.createInternalResourceQuery(request, namespaces, restrictedDataModels, allowedDatamodels);
         var response = client.search(build, IndexResource.class);
 
@@ -142,13 +175,22 @@ public class SearchIndexService {
         return result;
     }
 
+    public SearchResponseDTO<IndexResource> findResourcesByURI(Set<String> resourceURIs) throws IOException {
+        var response = client.search(ResourceQueryFactory.createFindResourcesByURIQuery(resourceURIs), IndexResource.class);
+        var result = new SearchResponseDTO<IndexResource>();
+        result.setResponseObjects(response.hits().hits().stream()
+                .map(Hit::source)
+                .toList()
+        );
+        result.setTotalHitCount(response.hits().total().value());
+        return result;
+    }
+
     private void getNamespacesFromModel(String modelUri, List<String> namespaces){
         var model = jenaService.getDataModel(modelUri);
-        if(model != null){
-            var resource = model.getResource(modelUri);
-            namespaces.addAll(MapperUtils.arrayPropertyToList(resource, OWL.imports));
-            namespaces.addAll(MapperUtils.arrayPropertyToList(resource, DCTerms.requires));
-        }
+        var resource = model.getResource(modelUri);
+        namespaces.addAll(MapperUtils.arrayPropertyToList(resource, OWL.imports));
+        namespaces.addAll(MapperUtils.arrayPropertyToList(resource, DCTerms.requires));
     }
 
     private Set<UUID> getOrganizationsForUser(YtiUser user){
